# AssetGuard

./: .gitattributes  .gitignore  .gitmodules  BUGS  CHANGELOG.md  CONFIG  INSTALL  LICENSE  README.md  SECURITY.md  docker-compose.yml  install.sh  rebrand.py  rebrand_logos.py  upgrade.sh
src/assetguard_modules/: CMakeLists.txt
src/assetguard_modules/agent_info/: CMakeLists.txt
src/assetguard_modules/agent_info/agent_info_impl/: CMakeLists.txt
src/assetguard_modules/agent_info/agent_info_impl/src/: agent_info_impl.cpp
src/assetguard_modules/agent_info/agent_info_impl/tests/: CMakeLists.txt  agent_info_metadata_test.cpp
src/assetguard_modules/agent_info/src/: agent_info.cpp
src/assetguard_modules/include/: wmodules.h  wmodules_def.h
src/assetguard_modules/inventory_sync/: CMakeLists.txt
src/assetguard_modules/inventory_sync/include/: inventorySync.hpp  inventory_sync.h
src/assetguard_modules/inventory_sync/qa/: .gitignore  README.md  assetguard_agent_controller.py  flatbuffers_manager.py  generate_flatbuffers.py  run_tests.py  test_inventory_sync_integration.py
src/assetguard_modules/inventory_sync/qa/test_data/: data_clean_multiple_indices_flow.json  data_clean_single_index_flow.json  data_context_multiple_flow.json  data_context_single_flow.json  groups_delta_flow.json  metadata_delta_flow.json  module_check_match_flow.json  module_check_mismatch_flow.json
src/assetguard_modules/inventory_sync/src/: agentSession.hpp  context.hpp  gapSet.hpp  inventorySync.cpp  inventorySyncFacade.hpp  inventorySyncQueryBuilder.hpp  responseDispatcher.hpp
src/assetguard_modules/inventory_sync/tests/unit/: agentSession_test.cpp  gapSet_test.cpp  mock_agentSession.hpp  responseDispatcher_test.cpp
src/assetguard_modules/inventory_sync/testtool/: README.md  main.cpp
src/assetguard_modules/inventory_sync/testtool/test_data/: INPUT_000.json  INPUT_001.json  INPUT_002.json  config.json
src/assetguard_modules/sca/: CMakeLists.txt
src/assetguard_modules/sca/include/: sca.h  sca.hpp
src/assetguard_modules/sca/sca_impl/: CMakeLists.txt
src/assetguard_modules/sca/sca_impl/include/: sca_recovery_utils.hpp
src/assetguard_modules/sca/sca_impl/tests/: CMakeLists.txt  sca_dataclean_test.cpp  sca_event_handler_test.cpp  sca_recovery_test.cpp  sca_recovery_utils_test.cpp
src/assetguard_modules/sca/src/: sca.cpp
src/assetguard_modules/src/: main.c  module_query_errors.h  wm_agent_info.c  wm_agent_info.h  wm_aws.c  wm_aws.h  wm_azure.c  wm_azure.h  wm_command.c  wm_command.h  wm_content_manager.c  wm_content_manager.h  wm_control.c  wm_control.h  wm_database.c  wm_database.h  wm_docker.c  wm_docker.h  wm_download.c  wm_download.h  wm_exec.c  wm_gcp.c  wm_gcp.h  wm_github.c  wm_github.h  wm_inventory_sync.c  wm_inventory_sync.h  wm_ms_graph.c  wm_ms_graph.h  wm_office365.c  wm_office365.h  wm_router.c  wm_router.h  wm_sca.c  wm_sca.h  wm_syscollector.c  wm_syscollector.h  wm_task_general.c  wm_task_general.h  wm_vulnerability_scanner.c  (+3 more)
src/assetguard_modules/src/agent_upgrade/: wm_agent_upgrade.c  wm_agent_upgrade.h
src/assetguard_modules/src/agent_upgrade/agent/: wm_agent_upgrade_agent.c  wm_agent_upgrade_agent.h  wm_agent_upgrade_com.c
src/assetguard_modules/src/agent_upgrade/manager/: wm_agent_upgrade_commands.c  wm_agent_upgrade_manager.c  wm_agent_upgrade_manager.h  wm_agent_upgrade_parsing.c  wm_agent_upgrade_parsing.h  wm_agent_upgrade_tasks.c  wm_agent_upgrade_tasks.h  wm_agent_upgrade_tasks_callbacks.c  wm_agent_upgrade_upgrades.c  wm_agent_upgrade_upgrades.h  wm_agent_upgrade_validate.c  wm_agent_upgrade_validate.h
src/assetguard_modules/src/task_manager/: wm_task_manager.c  wm_task_manager.h  wm_task_manager_commands.c  wm_task_manager_parsing.c  wm_task_manager_parsing.h  wm_task_manager_tasks.c  wm_task_manager_tasks.h
src/assetguard_modules/syscollector/: CMakeLists.txt
src/assetguard_modules/syscollector/include/: syscollector.h  syscollector.hpp  syscollectorNormalizer.hpp
src/assetguard_modules/syscollector/src/: syscollector.cpp  syscollectorImp.cpp  syscollectorNormalizer.cpp  syscollectorTablesDef.hpp
src/assetguard_modules/syscollector/tests/sysCollectorImp/: CMakeLists.txt  syscollectorImp_test.cpp  syscollectorImp_test.h  syscollector_vd_tests.cpp
src/assetguard_modules/syscollector/tests/sysNormalizer/: CMakeLists.txt  sysNormalizer_test.cpp  sysNormalizer_test.h
src/assetguard_modules/syscollector/testtool/: Readme.md  main.cpp
src/assetguard_modules/vulnerability_scanner/: CMakeLists.txt
src/assetguard_modules/vulnerability_scanner/doc/: rtr.md
src/assetguard_modules/vulnerability_scanner/include/: vulnerabilityScanner.hpp  vulnerabilityScannerDefs.hpp  vulnerability_scanner.h
src/assetguard_modules/vulnerability_scanner/qa/: test_efficacy_log.py  test_policy_change_log.py
src/assetguard_modules/vulnerability_scanner/qa/test_data/: config.json
src/assetguard_modules/vulnerability_scanner/src/: vulnerabilityScanner.cpp  vulnerabilityScannerFacade.cpp  vulnerabilityScannerFacade.hpp
src/assetguard_modules/vulnerability_scanner/src/databaseFeedManager/: CMakeLists.txt  databaseFeedManager.cpp  databaseFeedManager.hpp  databaseFeedManagerException.hpp  (+9 more)
src/assetguard_modules/vulnerability_scanner/tests/: CMakeLists.txt
src/assetguard_modules/vulnerability_scanner/testtool/: CMakeLists.txt
src/engine/test/engine-test-utils/: pyproject.toml
src/logcollector/: CMakeLists.txt
src/logcollector/include/: logcollector.h  macos_log.h
src/logcollector/src/: config.c  journal_log.c  lccom.c  logcollector.c  macos_log.c  main.c  read_audit.c  read_command.c  read_djb_multilog.c  read_fullcommand.c  read_journald.c  read_json.c  read_macos.c  read_mssql_log.c  read_multiline.c  read_multiline_regex.c  read_mysql_log.c  read_nmapg.c  read_ossecalert.c  read_postgresql_log.c  read_snortfull.c  read_syslog.c  read_ucs2_be.c  read_ucs2_le.c  read_win_el.c  read_win_event_channel.c  state.c  state.h
src/os_execd/: CMakeLists.txt
src/os_execd/include/: execd.h
src/os_execd/src/: config.c  exec.c  execd.c  main.c  wcom.c
(+3403 files in other folders)
