[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "engine-test-utils"
version = "0.0.1"
authors = [{ name = "AssetGuard, Inc." }]
description = "Test utilities for AssetGuard Engine"
readme = "README.md"
requires-python = ">=3.8"
classifiers = ["Programming Language :: Python :: 3"]

dependencies = ["api-communication"]

[project.urls]
Homepage = "https://github.com/assetguard/assetguard/src/engine/tools/engine-updown"
